# osrd

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  flake.nix  osrd-compose
.github/: dependabot.yml
editoast/: .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  justfile  map_layers.yml  openapi.yaml  signal_sprites.yml
editoast/assets/fonts/: generate-glyphs.sh
editoast/assets/signal_sprites/: generate-atlas.sh
editoast/assets/sprites/: generate-atlas.sh
editoast/editoast_authz/: Cargo.toml  authorization_model.fga
editoast/editoast_authz/src/: authorizer.rs  builtin_role.rs  lib.rs  model.rs  regulator.rs  role.rs  subject.rs
editoast/editoast_common/src/: lib.rs  tracing.rs
editoast/editoast_derive/: Cargo.toml
editoast/editoast_derive/src/: lib.rs  model.rs
editoast/editoast_derive/src/model/: args.rs  codegen.rs  config.rs  parsing.rs
editoast/editoast_derive/src/snapshots/: editoast_derive__model__tests__construction.snap  editoast_derive__model__tests__single_pk_model.snap
editoast/editoast_models/: Cargo.toml
editoast/editoast_models/src/: db_connection_pool.rs  lib.rs  model.rs  rolling_stock.rs  tables.rs
editoast/editoast_models/src/rolling_stock/: rolling_stock_category.rs
editoast/editoast_osrdyne_client/src/: lib.rs  mock_client.rs
editoast/editoast_schemas/: Cargo.toml
editoast/editoast_schemas/src/: infra.rs  lib.rs  paced_train.rs  rolling_stock.rs
editoast/editoast_schemas/src/infra/: endpoint.rs  railjson.rs  side.rs
editoast/editoast_schemas/src/primitives/: duration.rs  identifier.rs  non_blank_string.rs
editoast/editoast_schemas/src/rolling_stock/: effort_curves.rs  etcs_brake_params.rs  rolling_stock_category.rs
editoast/editoast_schemas/src/train_schedule/: distribution.rs  margins.rs  path_item.rs  power_restriction_item.rs  schedule_item.rs  train_schedule_base.rs  train_schedule_options.rs
editoast/fga/: Cargo.toml
editoast/fga/src/: client.rs  doctest_setup.rs  lib.rs  model.rs
editoast/fga/src/client/: authorization_models.rs  healthz.rs  queries.rs  stores.rs  tuples.rs
editoast/fga/tests/: doctest.fga  model.fga
editoast/fga_derive/: Cargo.toml
editoast/fga_derive/src/: lib.rs
editoast/migrations/2024-11-22-151624_group-name-unique/: down.sql
editoast/migrations/2025-02-03-094532_add_primary_and_other_categories_to_rolling_stock/: down.sql  up.sql
editoast/migrations/2025-02-13-090913_add_missing_fkey_index/: down.sql  up.sql
editoast/migrations/2025-02-13-115126_create_paced_trains/: down.sql  up.sql
editoast/migrations/2025-02-18-122020_stdcm_log_allow_error_response/: down.sql  up.sql
editoast/migrations/2025-02-19-173042_adapt_search_environment_adding_enabled_window/: down.sql  up.sql
editoast/migrations/2025-03-04-132534_roles_simplification/: down.sql  up.sql
editoast/migrations/2025-03-12-095345_openfga_roles/: down.sql  up.sql
editoast/migrations/2025-03-21-153132_search-user/: down.sql  up.sql
editoast/osm_to_railjson/: Cargo.toml  justfile
editoast/src/: error.rs  main.rs  valkey_utils.rs
editoast/src/client/: group.rs  healthcheck.rs  import_rolling_stock.rs  infra_commands.rs  mod.rs  openfga_config.rs  roles.rs  runserver.rs  search_commands.rs  stdcm_search_env_commands.rs  timetables_commands.rs  user.rs  valkey_config.rs
editoast/src/core/: conflict_detection.rs  mocking.rs  mod.rs  mq_client.rs  pathfinding.rs  simulation.rs  stdcm.rs
editoast/src/generated_data/: buffer_stop.rs  detector.rs  electrification.rs  mod.rs  neutral_section.rs  neutral_sign.rs  operational_point.rs  psl_sign.rs  signal.rs  speed_section.rs  switch.rs  track_section.rs
editoast/src/generated_data/error/: mod.rs
editoast/src/infra_cache/operation/: mod.rs
editoast/src/map/: mod.rs
editoast/src/models/: auth.rs  auth_driver.rs  fixtures.rs  infra.rs  mod.rs  paced_train.rs  railjson.rs  rolling_stock_model.rs  scenario.rs  stdcm_log.rs  stdcm_search_environment.rs  tags.rs  temporary_speed_limits.rs  timetable.rs  train_schedule.rs  work_schedules.rs
editoast/src/models/infra/: errors.rs  object_queryable.rs
editoast/src/models/prelude/: create.rs  delete.rs  list.rs  mod.rs  retrieve.rs  update.rs
editoast/src/tests/: example_rolling_stock_1.json  example_rolling_stock_2_energy_sources.json  example_rolling_stock_3.json  example_towed_rolling_stock_1.json
editoast/src/views/: authz.rs  documents.rs  electrical_profiles.rs  fonts.rs  layers.rs  mod.rs  paced_train.rs  pagination.rs  projection.rs  projects.rs  rolling_stock.rs  scenario.rs  search.rs  speed_limit_tags.rs  sprites.rs  stdcm_logs.rs  stdcm_search_environment.rs  study.rs  temporary_speed_limits.rs  test_app.rs  timetable.rs  train_schedule.rs  work_schedules.rs
editoast/src/views/infra/: attached.rs  delimited_area.rs  edition.rs  errors.rs  lines.rs  mod.rs  objects.rs  pathfinding.rs  railjson.rs  routes.rs
editoast/src/views/path/: path_item_cache.rs  pathfinding.rs
editoast/src/views/rolling_stock/: form.rs  light.rs  towed.rs
editoast/src/views/scenario/: macro_nodes.rs
editoast/src/views/timetable/: stdcm.rs
osrdyne/: Cargo.toml  Dockerfile  justfile
osrdyne/src/: api.rs  config.rs  key.rs  main.rs  management_client.rs  pool.rs  queue_controller.rs  target_tracker.rs
osrdyne/src/drivers/: docker.rs  kubernetes.rs  process_compose.rs
osrdyne/src/drivers/kubernetes/: keda.rs
python/osrd_schemas/: justfile  pyproject.toml
python/osrd_schemas/osrd_schemas/: external_generated_inputs.py  generated.py  infra.py  infra_editor.py  path.py  rolling_stock.py  switch_type.py  train_schedule.py
python/railjson_generator/: README.md  justfile  pyproject.toml
python/railjson_generator/railjson_generator/: infra_builder.py  simulation_builder.py  test_external_generated_inputs.py  test_infra_builder.py  test_simulation_builder.py  test_speed_section.py  test_track_section.py
python/railjson_generator/railjson_generator/schema/: test_location.py
python/railjson_generator/railjson_generator/utils/: routes_generator.py  test_routes_generator.py
(+826 files in other folders)
