[package]
name = "editoast"
license.workspace = true
version.workspace = true
edition.workspace = true

[workspace]
members = [
  ".",
  "editoast_common",
  "editoast_derive",
  "editoast_models",
  "editoast_osrdyne_client",
  "editoast_schemas",
  "editoast_search",
  "osm_to_railjson",
]

[workspace.lints.rust]
dependency_on_unit_never_type_fallback = "allow" # this is caused by tracing, we can't do anything about it

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0"

[workspace.dependencies]
chrono = { version = "0.4.39", default-features = false, features = ["serde"] }
clap = { version = "4.5.23", features = ["derive", "env"] }
derivative = "2.2.0"
diesel = { version = "2.2", default-features = false, features = [
  "32-column-tables",
  "chrono",
  "postgres",
  "serde_json",
  "uuid",
] }
diesel-async = { version = "0.5", default-features = false, features = [
  "deadpool",
  "postgres",
] }
editoast_authz = { path = "./editoast_authz" }
editoast_common = { path = "./editoast_common" }
editoast_derive = { path = "./editoast_derive" }
editoast_models = { path = "./editoast_models" }
editoast_osrdyne_client = { path = "./editoast_osrdyne_client" }
editoast_schemas = { path = "./editoast_schemas" }
editoast_search = { path = "./editoast_search" }
enum-map = "2.7.3"
futures = { version = "0.3.31" }
futures-util = { version = "0.3.30" }
geojson = { version = "0.24", default-features = false }
geos = { version = "8.3.1", features = ["json"] }
hostname = "0.4.0"
itertools = "0.13.0"
mvt = "0.9.5"
openssl = "0.10.68"
opentelemetry-semantic-conventions = { version = "0.26", features = [
  "semconv_experimental",
] }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio", "trace"] }
paste = "1.0.15"
postgis_diesel = { version = "2.4.1", features = ["serde"] }
postgres-openssl = "0.5.0"
pretty_assertions = "1.4.1"
rand = "0.8.5"
rangemap = "1.5.1"
# 0.12.0 to 0.12.4 have weird timeout issues https://github.com/seanmonstar/reqwest/issues/2283
# This bug was introduced between 0.12.0 and 0.12.3.
opentelemetry = { version = "0.27.1", default-features = false, features = [
  "trace",
] }
reqwest = { version = "0.11.27", features = ["json"] }
rstest = { version = "0.19.0", default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
strum = { version = "0.26.3", features = ["derive"] }
tempfile = "3.15.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["fs", "macros", "rt-multi-thread"] }
tokio-postgres = "0.7.12"
tracing = { version = "0.1.41", default-features = false, features = [
  "attributes",
  "log",
] }
tracing-opentelemetry = { version = "0.28.0", default-features = false, features = [
  "tracing-log",
] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uom = { version = "0.36.0", default-features = false, features = ["f64", "si"] }
url = { version = "2.5.4", features = ["serde"] }
urlencoding = "2.1.3"
utoipa = { version = "4.2.3", features = ["chrono", "uuid"] }
uuid = { version = "1.11.1", features = ["serde", "v4"] }

[dependencies]
anyhow = "1.0"
approx = "0.5.1"
async-trait = "0.1.85"
axum = { version = "0.8.1", default-features = false, features = [
  "multipart",
  "tracing",
] }
axum-extra = { version = "0.10.0", default-features = false, features = [
  "typed-header",
] }
axum-test = { version = "17.0.2", default-features = false }
axum-tracing-opentelemetry = { version = "0.25.0", default-features = false, features = [
  "tracing_level_info",
] }
chrono.workspace = true
clap = { version = "4.5.26", features = ["derive", "env"] }
colored = "3.0.0"
dashmap = "6.1.0"
deadpool = { version = "0.12.1", features = [
  "managed",
  "rt_tokio_1",
  "unmanaged",
] }
derivative.workspace = true
diesel.workspace = true
diesel-async = { workspace = true }
diesel_json = "0.2.1"
editoast_authz.workspace = true
editoast_common = { workspace = true }
editoast_derive.workspace = true
editoast_models.workspace = true
editoast_osrdyne_client.workspace = true
editoast_schemas.workspace = true
editoast_search = { workspace = true }
enum-map.workspace = true
enumset = "1.1.5"
futures.workspace = true
futures-util.workspace = true
geos.workspace = true
headers = "0.4.0"
hostname.workspace = true
image = { version = "0.25.5", default-features = false, features = [
  "bmp",
  "gif",
  "jpeg",
  "png",
  "tiff",
  "webp",
] }
inventory = "0.3"
itertools.workspace = true
json-patch = { version = "3.0.1", default-features = false, features = [
  "utoipa",
] }
lapin = "2.5.0"
mime = "0.3.17"
mvt.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp = { version = "0.27.0", default-features = false, features = [
  "grpc-tonic",
  "trace",
] }
opentelemetry-semantic-conventions.workspace = true
opentelemetry_sdk.workspace = true
ordered-float = { version = "4.6.0", features = ["serde"] }
paste.workspace = true
pathfinding = "4.13.0"
postgis_diesel.workspace = true
rand.workspace = true
rangemap.workspace = true
redis = { version = "0.28", default-features = false, features = [
  "cluster-async",
  "connection-manager",
  "tokio-comp",
  "tokio-native-tls-comp",
] }
regex = "1.11.1"
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
# official serde_qs seems unmaintained. Bump to `axum:0.8` is an opened PR waiting to be merged.
# https://github.com/samscott89/serde_qs/pull/118
serde_qs = { version = "0.13.0", git = "https://github.com/Atrox/serde_qs", rev = "2cfa3ee0", features = [
  "axum",
] }
serde_with = "3.12.0"
serde_yaml = "0.9.34"
sha1 = "0.10"
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7.13", features = ["io", "tracing"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = [
  "cors",
  "fs",
  "limit",
  "normalize-path",
  "trace",
] }
tracing.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
uom.workspace = true
url.workspace = true
utoipa.workspace = true
uuid.workspace = true
# TODO: remove validator crate dependency (little use and benefits)
validator = { version = "0.19.0", features = ["derive"] }

[dev-dependencies]
async-std = { version = "1.13.0", features = ["attributes", "tokio1"] }
axum = { version = "0.8.1", default-features = false, features = [
  "macros",
  "multipart",
  "tracing",
] }
editoast_authz = { workspace = true, features = ["fixtures"] }
editoast_models = { workspace = true, features = ["testing"] }
editoast_osrdyne_client = { workspace = true, features = ["mock_client"] }
pretty_assertions.workspace = true
rstest.workspace = true
serial_test = "3.2.0"
tempfile.workspace = true

[lints]
workspace = true

[profile.dev]
debug = "limited"

[profile.dev-for-debug]
inherits = "dev"
debug = "full"

# Makes snapshot diffs faster to compute.
# insta is used in editast_derive to track changes made to proc-macros.
# Cf. https://insta.rs/docs/quickstart/#optional-faster-runs
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
