[package]
edition = "2024"
name = "osrdyne"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
axum = "0.8.3"
axum-extra = { version = "0.10.1", features = ["query"] }
axum-tracing-opentelemetry = "0.26.1"
bollard = "0.18"
env_logger = "0.11.7"
figment = { version = "0.10.19", features = ["env", "yaml"] }
futures-lite = "2.6.0"
http = "1.3.1"
im = "15.1.0"
k8s-openapi = { version = "0.24", features = ["v1_29"] }
kube = { version = "0.99", default-features = false, features = [
  "client",
  "derive",
  "rustls-tls",
] }
lapin = "2.5.1"
opentelemetry = "0.28.0"
opentelemetry-otlp = { version = "0.28.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.28.0"
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
percent-encoding = "2.3.1"
priority-queue = "2.3.1"
reqwest = { version = "0.12.15", default-features = false, features = [
  "json",
  "rustls-tls",
] }
schemars = "0.8.22"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.8"
smallvec = { version = "1.14.0", features = ["serde"] }
thiserror = "2.0.12"
thunderdome = "0.6.1"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.29.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
