[package]
name = "editoast_authz"
license.workspace = true
version.workspace = true
edition.workspace = true

[features]
fixtures = []

[dependencies]
fga.workspace = true
futures.workspace = true
itertools.workspace = true
serde = { workspace = true, features = ["derive"] }
strum.workspace = true
thiserror.workspace = true
tracing.workspace = true
utoipa.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tokio.workspace = true

[lints]
workspace = true
