[package]
name = "editoast_authz"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
derive_more = { version = "2.0.1", features = ["from"] }
fga.workspace = true
futures.workspace = true
itertools.workspace = true
serde = { workspace = true, features = ["derive"] }
strum.workspace = true
thiserror.workspace = true
tracing.workspace = true
utoipa.workspace = true

[dev-dependencies]
editoast_common.workspace = true
pretty_assertions.workspace = true
stdext.workspace = true
tokio.workspace = true

[lints]
workspace = true
