[package]
name = "editoast_derive"
license.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling.workspace = true
paste.workspace = true
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true
syn.workspace = true

[lib]
proc-macro = true

[dev-dependencies]
insta = "1.42"
pretty_assertions = "1.4.1"
prettyplease = "0.2"

[lints]
workspace = true
