[package]
name = "editoast_schemas"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
derivative.workspace = true
editoast_common.workspace = true
editoast_derive.workspace = true
enum-map.workspace = true
geojson.workspace = true
iso8601 = "0.6.2"
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
uom.workspace = true
utoipa.workspace = true
uuid.workspace = true

[lints]
workspace = true
