[package]
name = "osm_to_railjson"
license.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
editoast_schemas.workspace = true
geo-types = "0.7.15"
geos.workspace = true
osm4routing = "0.7.2"
osmpbfreader = "0.17.0"
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
