[project]
name = "osrd_schemas"
version = "0.8.16"
description = ""
authors = [{ name = "OSRD Contributors", email = "contact@osrd.fr" }]
requires-python = ">= 3.11"

dependencies = ["geojson-pydantic ~= 1.0.0", "pydantic ~= 2.6"]

[project.optional-dependencies]
dev = ["pyright ~= 1.1.393", "ruff ~= 0.9.5"]
