[project]
name = "osrd_schemas"
version = "0.8.16"

[tool.poetry]
name = "osrd_schemas"
version = "0.8.16"
description = ""
authors = ["OSRD <contact@osrd.fr>"]

[tool.poetry.dependencies]
geojson-pydantic = "^1.0.0"
pydantic = "^2.1.1"
python = ">=3.9,<3.12"

[tool.poetry.group.dev.dependencies]
ruff = "0.9.5"
pyright = "1.1.393"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
