[project]
name = "railjson_generator"
version = "0.4.9"

[tool.poetry]
name = "railjson_generator"
version = "0.4.9"
description = ""
authors = ["OSRD <contact@osrd.fr>"]

[tool.poetry.dependencies]
osrd-schemas = { path = "../osrd_schemas/", develop = false }
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
python = ">=3.9,<3.12"

[tool.poetry.group.dev.dependencies]
pyright = "1.1.393"
ruff = "0.9.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
