[project]
name = "railjson_generator"
version = "0.4.9"
description = ""
authors = [{ name = "OSRD Contributors", email = "contact@osrd.fr" }]
requires-python = ">= 3.11"

dependencies = ["osrd-schemas @ ../osrd_schemas"]

[project.optional-dependencies]
check = [
  "pyright ~= 1.1.393",
  "pytest ~= 7.4.3",
  "pytest-cov ~= 4.1.0",
  "ruff ~= 0.9.5",
]
